# datastructures

./: CMakeLists.txt  buildTests.sh
src/: CMakeLists.txt
src/trees/: binaryIndexedTree.cpp  segmentTree.cpp
src/trees/include/: binaryIndexedTree.hpp  segmentTree.hpp
testing/: CMakeLists.txt  binaryIndexTreeTests.cpp  segmentTreeTests.cpp
